# TestDemoKotlin

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/biao/testdemokotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/biao/testdemokotlin/: Jni.kt  MainActivity.kt
app/src/main/jni/: write.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/biao/testdemokotlin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
